@@ -68,6 +68,9 @@
         and the program will show the estimated defocus in the status bar and draw a set 
         of circles at the corresponding zeros of the CTF.&nbsp; See the
         <a href="menu_process.htm#hid_process_fft">FFT command help</a> for details.</P>
+    <P><B><I>Middle mouse button click:</I></B> If the image is an FFT, the program 
+      will show the spatial frequency and periodicity (resolution) of the clicked 
+      position in the status bar.</P>
       <P><B><I>Ctrl - middle mouse button click:</I></B> Zoom up around the clicked 
         point.</P>
       <P><B><I>Ctrl - right mouse button click:</I></B> Zoom down around the clicked 
