@@ -139,6 +139,8 @@
         the active window. The FFT will be placed into buffer A and existing images will be 
         rolled to higher buffers to the extent specified in the Buffer Control Panel, 
         just as when a new image is acquired.</P>
+    <P>If you click in an FFT with the middle mouse button, the status bar will show 
+      the frequency and periodicity (resolution) of the clicked position.</P>
     <P>If you have an FFT that shows Thon rings, there are two ways to determine the 
       defocus: either by automatic fitting to several Thon rings with the Ctffind 
       module (see the <a href="#hid_process_doctffindfitonclick">Do Ctffind On Click</a> 
