@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+1/23/18: Added output on status bar of frequency and resolution for a point
+clicked in FFT with middle mouse button.
+
 1/23/18: Added ctffind module, options to support fitting to Thon rings when
 click in FFT, and CtfFind script command to run it with specified parameters.
 
